--- a/MVC.Budget.MicVerg/BudgetApp/Budget/Budget.csproj
+++ b/MVC.Budget.MicVerg/BudgetApp/Budget/Budget.csproj
@@ -20,6 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="Views\" />
     <Folder Include="wwwroot\js\" />
     <Folder Include="wwwroot\css\" />
   </ItemGroup>
